baru sampe sini

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Menit ke 14.12 https://www.youtube.com/watch?v=CRBo8uiHZmM&t=2802s-->
+<!-- Menit ke 19.56  https://www.youtube.com/watch?v=CRBo8uiHZmM&t=2802s-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,6 +19,16 @@
     <!--side bar-->
     <div class="sidebar">
       <h1 class="logo">HireMe</h1>
+      <!--Main-->
+    <div class="main">
+      <div class="main-header">
+        <ion-icon class="menu-bar" name="menu-outline"></ion-icon>
+        <div class="search">
+          <input type="text" placeholder="Search your best job here...">
+          <button class="btn-search"><ion-icon name="seacrh-outline"></ion-icon></button>
+        </div>
+      </div>
+    </div>
       <div class="menu">
         <a href="#"><ion-icon name="home-outline"></ion-icon>Home</a>
         <a href="#"><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a>
@@ -29,7 +39,21 @@
         <a href="#"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
         <a href="#"><ion-icon name="settings-outline"></ion-icon>Settings</a>
       </div>
+      <!-- Adding Profile-->
+    <div class="profile">
+      <img class="profile-img" src="images/woman.png">
+      <div class="profile-name">
+        <h4>Your Name</h4>
+        <p> Your Job</p>
+      </div>
     </div>
+
+    
+
+
+
+
+
   </body>
   <!-- adding icon -->
   <script
