--- a/bookmark.html
+++ b/bookmark.html
@@ -1,4 +1,3 @@
-<!-- Menit ke 41.41  https://www.youtube.com/watch?v=CRBo8uiHZmM&t=2802s-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,7 +24,7 @@
         <a href="#"
           ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
         >
-        <a href="bookmark.html"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
+        <a href="#"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
         <a href="#"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
         <a href="settings.html"
           ><ion-icon name="settings-outline"></ion-icon>Settings</a
@@ -104,33 +103,6 @@
         </div>
 
         <div class="card">
-          <div class="card-left yellow-bg">
-            <img src="images\tiktok.png" alt="" />
-          </div>
-          <div class="card-center">
-            <h3>Tktok</h3>
-            <p class="card-detail">Data Analyst, Product Analyst</p>
-            <p class="card-loc">
-              <ion-icon name="location-outline"></ion-icon>Abcd Street
-            </p>
-            <div class="card-sub">
-              <p><ion-icon name="location-outline"></ion-icon>1 day ago</p>
-              <p><ion-icon name="hourglass-outline"></ion-icon>Full-time</p>
-              <p><ion-icon name="people-outline"></ion-icon>150 Applicants</p>
-            </div>
-          </div>
-          <div class="card-right">
-            <div class="card-tag">
-              <h5>division</h5>
-              <a href="#">Data Science</a>
-            </div>
-            <div class="card-salary">
-              <p><b>$250k</b> <span>/ year</span></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
           <div class="card-left red-bg">
             <img src="images\youtube.png" alt="" />
           </div>
@@ -153,60 +125,6 @@
             </div>
             <div class="card-salary">
               <p><b>$200k</b> <span>/ year</span></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-left purple-bg">
-            <img src="images\apple.png" alt="" />
-          </div>
-          <div class="card-center">
-            <h3>Apple</h3>
-            <p class="card-detail">UI UX Designer</p>
-            <p class="card-loc">
-              <ion-icon name="location-outline"></ion-icon>Abcd Street
-            </p>
-            <div class="card-sub">
-              <p><ion-icon name="location-outline"></ion-icon>3 hour ago</p>
-              <p><ion-icon name="hourglass-outline"></ion-icon>Full-time</p>
-              <p><ion-icon name="people-outline"></ion-icon>100 Applicants</p>
-            </div>
-          </div>
-          <div class="card-right">
-            <div class="card-tag">
-              <h5>division</h5>
-              <a href="#">Designer App</a>
-            </div>
-            <div class="card-salary">
-              <p><b>$300k</b> <span>/ year</span></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-left red-bg">
-            <img src="images\shopee.png" alt="" />
-          </div>
-          <div class="card-center">
-            <h3>Shopee</h3>
-            <p class="card-detail">Product Analyst</p>
-            <p class="card-loc">
-              <ion-icon name="location-outline"></ion-icon>Abcd Street
-            </p>
-            <div class="card-sub">
-              <p><ion-icon name="location-outline"></ion-icon>3 day ago</p>
-              <p><ion-icon name="hourglass-outline"></ion-icon>Full-time</p>
-              <p><ion-icon name="people-outline"></ion-icon>100 Applicants</p>
-            </div>
-          </div>
-          <div class="card-right">
-            <div class="card-tag">
-              <h5>division</h5>
-              <a href="#">Product</a>
-            </div>
-            <div class="card-salary">
-              <p><b>$250k</b> <span>/ year</span></p>
             </div>
           </div>
         </div>
@@ -262,21 +180,14 @@
       <hr class="divider" />
       <div class="detail-btn">
         <button class="btn-apply" onclick="ubahOpacityApply()">Apply Now</button>
-        <button class="btn-save" onclick="ubahOpacitySave()">Save Job</button>
+        <button class="btn-saved" onclick="ubahOpacitySaved()">Save Job</button>
       </div>
     </div>
-  </body>
-  <!-- adding icon -->
-  <script
-    type="module"
-    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-  ></script>
-  <script
-    nomodule
-    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-  ></script>
-
-  <!-- adding library jquery-->
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="app.js"></script>
+</body>
+<!-- adding icon -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <!-- adding library jquery-->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="app.js"></script>
 </html>
