--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,8 +26,8 @@
         >
         <a href="#"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
         <a href="#"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
-        <a href="settings.html"
-          ><ion-icon name="settings-outline"></ion-icon>Settings</a
+        <a href="aboutUs.html"
+          ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
         >
       </div>
 
