--- a/profile.html
+++ b/profile.html
@@ -27,8 +27,8 @@
         >
         <a href="#"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
         <a href="#"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
-        <a href="settings.html"
-          ><ion-icon name="settings-outline"></ion-icon>Settings</a
+        <a href="aboutUs.html"
+          ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
         >
       </div>
 
@@ -49,17 +49,19 @@
             <form action="">
                 <h2>My Profile</h2>
                 <div class="inputBox">
-                    <input type="text" placeholder="YourName">
+                    <input type="text" placeholder="Nur Alfi">
                 </div>
                 <div class="inputBox">
-                    <input type="email" placeholder="Your e-mail">
+                    <input type="email" placeholder="NurAl@gmail.com">
                 </div>
                 <div class="inputBox">
-                    <input type="text" placeholder="Subject">
+                    <input type="text" placeholder="West Jakarta">
                 </div>
                 <div class="inputBox">
-                    <input type="text" placeholder="Message">
+                    <input type="text" placeholder="Engineer">
                 </div>
+                <input type="submit" value="Save" class="btn">
+            </form>
             </div>
            
             </form>
