--- a/aboutUs.html
+++ b/aboutUs.html
@@ -24,7 +24,7 @@
         <a href="#"
           ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
         >
-        <a href="#"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
+        <a href="bookmark.html"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
         <a href="#"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
         <a href="aboutUs.html"
           ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
