--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
         <a href="#"
           ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
         >
-        <a href="#"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
+        <a href="bookmark.html"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
         <a href="#"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
         <a href="aboutUs.html"
           ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
@@ -43,7 +43,10 @@
     </div>
 
     <!--Main-->
-    <div class="Datadiri">
+    <div class="main">
+      <div class="main-header">
+        <ion-icon class="menu-bar" name="menu-outline"></ion-icon>
+      </div>
         <img class="Datadiri-img" src="images/woman.png"/>
         <div class="rowprofile">
             <form action="">
@@ -60,14 +63,12 @@
                 <div class="inputBox">
                     <input type="text" placeholder="Engineer">
                 </div>
-                <input type="submit" value="Save" class="btn">
-            </form>
-            </div>
-           
-            </form>
-        </div>
+                <!-- <div class="inputBox"> -->
+                <input type="submit" value="Save" class="btn-input">
+                <!-- </div> -->
+              </form>
+          </div>
     </div>
-
   </body>
 
   <!-- adding icon -->
