--- a/profile.html
+++ b/profile.html
@@ -16,20 +16,23 @@
     <title>Hire Me</title>
   </head>
   <body>
-    <!--side bar-->
-    <div class="sidebar">
-      <h1 class="logo">HireMe</h1>
-      <div class="menu">
-        <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
-        <a href="#"><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a>
-        <a href="#"
-          ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
-        >
-        <a href="bookmark.html"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
-        <a href="#"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
-        <a href="aboutUs.html"
-          ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
-        >
+   <!--side bar-->
+   <div class="sidebar">
+    <h1 class="logo">HireMe</h1>
+    <div class="menu">
+      <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
+      <a href="404.html"><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a>
+      <a href="404.html"
+        ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
+      >
+      <a href="bookmark.html"
+        ><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a
+      >
+      <a href="404.html"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
+      <a href="aboutUs.html"
+        ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
+      >
+    </div>
       </div>
 
       <!-- Adding Profile-->
