--- a/404.html
+++ b/404.html
@@ -12,6 +12,18 @@
       rel="stylesheet"
     />
 
+    <!-- google web fonts-->
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Customized Boostrap Stylesheet-->
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
     <title>Hire Me</title>
   </head>
   <body>
@@ -42,6 +54,25 @@
         </div>
       </div>
     </div>
+
+    <!-- 404 Start -->
+    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+      <div class="container text-center">
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
+            <h1 class="display-1">404</h1>
+            <h1 class="mb-4">Page Not Found</h1>
+            <p class="mb-4">
+              We’re sorry, the page you have looked for does not exist in our
+              website! Maybe go to our home page or try to use a search?
+            </p>
+            <a class="btn btn-primary py-3 px-5" href="">Go Back To Home</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 404 End -->
   </body>
 
   <!-- adding icon -->
