tinggal rapihin bagian profil beda beda masa

--- a/404.html
+++ b/404.html
@@ -32,14 +32,18 @@
       <h1 class="logo">HireMe</h1>
       <div class="menu">
         <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
-        <a href="404.html"><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a>
+        <a href="404.html"
+          ><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a
+        >
         <a href="404.html"
           ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
         >
         <a href="bookmark.html"
           ><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a
         >
-        <a href="404.html"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
+        <a href="404.html"
+          ><ion-icon name="mail-unread-outline"></ion-icon>Messages</a
+        >
         <a href="aboutUs.html"
           ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
         >
@@ -49,7 +53,7 @@
       <div class="profile">
         <img class="profile-img" src="images/woman.png" />
         <div class="profile-name">
-          <a href="profile.html">Nur Alfi</a>
+            <a style="text-decoration: none"  href="profile.html">Nur Alfi</a>
           <p>UI Designer</p>
         </div>
       </div>
@@ -67,7 +71,9 @@
               We’re sorry, the page you have looked for does not exist in our
               website! Maybe go to our home page or try to use a search?
             </p>
-            <a class="btn btn-primary py-3 px-5" href="">Go Back To Home</a>
+            <a class="btn btn-primary py-3 px-5" href="index.html"
+              >Go Back To Home</a
+            >
           </div>
         </div>
       </div>
