--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
       <div class="profile">
         <img class="profile-img" src="images/woman.png" />
         <div class="profile-name">
-          <a href="profile.html">Nur Alfi</a>
+          <a style="text-decoration: none"  href="profile.html">Nur Alfi</a>
           <p>UI Designer</p>
         </div>
       </div>
