--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
       <h1 class="logo">HireMe</h1>
       <div class="menu">
         <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
-        <a href="404.html"><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a>
+        <a href="404.html"
+          ><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a
+        >
         <a href="404.html"
           ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
         >
         <a href="bookmark.html"
           ><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a
         >
-        <a href="404.html"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
+        <a href="404.html"
+          ><ion-icon name="mail-unread-outline"></ion-icon>Messages</a
+        >
         <a href="aboutUs.html"
           ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
         >
@@ -38,7 +42,7 @@
       <div class="profile">
         <img class="profile-img" src="images/woman.png" />
         <div class="profile-name">
-          <a href="profile.html">Nur Alfi</a>
+          <a style="text-decoration: none" href="profile.html">Nur Alfi</a>
           <p>UI Designer</p>
         </div>
       </div>
@@ -263,7 +267,9 @@
       </div>
       <hr class="divider" />
       <div class="detail-btn">
-        <button class="btn-apply" onclick="ubahOpacityApply()">Apply Now</button>
+        <button class="btn-apply" onclick="ubahOpacityApply()">
+          Apply Now
+        </button>
         <button class="btn-save" onclick="ubahOpacitySave()">Save Job</button>
       </div>
     </div>
