--- a/profile.html
+++ b/profile.html
@@ -66,6 +66,12 @@
                 <div class="inputBox">
                     <input type="text" placeholder="Engineer">
                 </div>
+                <div class="form">
+                  <h3>Upload your CV/Resume</h3>
+                  <form name="from_upload">
+                    <input type="file" placeholder="Upload CV/Resume">
+                  </form>
+                </div>
                 <!-- <div class="inputBox"> -->
                 <input type="submit" value="Save" class="btn-input">
                 <!-- </div> -->
