--- a/aboutUs.html
+++ b/aboutUs.html
@@ -21,14 +21,18 @@
       <h1 class="logo">HireMe</h1>
       <div class="menu">
         <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
-        <a href="404.html"><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a>
+        <a href="404.html"
+          ><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a
+        >
         <a href="404.html"
           ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
         >
         <a href="bookmark.html"
           ><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a
         >
-        <a href="404.html"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
+        <a href="404.html"
+          ><ion-icon name="mail-unread-outline"></ion-icon>Messages</a
+        >
         <a href="aboutUs.html"
           ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
         >
@@ -38,8 +42,67 @@
       <div class="profile">
         <img class="profile-img" src="images/woman.png" />
         <div class="profile-name">
-          <a style="text-decoration: none"  href="profile.html">Nur Alfi</a>
+          <a style="text-decoration: none" href="profile.html">Nur Alfi</a>
           <p>UI Designer</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container5">
+      <div class="kontentk">
+        <img class="illus" src="images/illus.png" alt="Tunggu Sebentar Yaaa~" />
+        <p class="keterangan">
+          Website ini adalah sebuah site yang kami buat untuk para fans
+          Blackpink atau biasa disebut Blink. Terdapat beberapa informasi
+          seperti profil member, album, lagu-lagu blackpink, dll. alasan kami
+          membuat ini untuk memudahkan blink untuk saling berinteraksi satu sama
+          lain dan bisa untuk mencari teman juga.
+          <br />Jika ada kesalahan informasi, silahkan hubungi kontak kami. kami
+          juga menerima kritik dan saran. <br />jangan lupa terus dukung kami.
+          kurang lebihnya mohon maaf, terima kasih
+        </p>
+
+        <p class="judul">Kontak Kami</p>
+
+        <div class="kartukontak">
+          <div class="kartu kartunama grayosh">
+            <p class="namakn">Farrel Valentino Awewra</p>
+            <div class="icon">
+              <a target="_blank" href="mailto:gladysglashta@gmail.com">
+                <img src="images/email60.png" alt="Tunggu Sebentar Yaaa~" />
+              </a>
+              <a target="_blank" href="https://github.com/farrelval">
+                <img src="images/github60.png" alt="Tunggu Sebentar Yaaa~" />
+              </a>
+              <a
+                target="_blank"
+                href="https://www.instagram.com/gladysaisha/?hl=en"
+              >
+                <img
+                  src="images/instagram60.png"
+                  alt="Tunggu Sebentar Yaaa~"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="kartu kartunama grayosh">
+            <p class="namakn">Nur Alfianti Ika Mawarni</p>
+            <div class="icon">
+              <a target="_blank" href="mailto:lailasys13@gmail.com">
+                <img src="images/email60.png" alt="Tunggu Sebentar Yaaa~" />
+              </a>
+              <a target="_blank" href="https://github.com/NurAlfianti">
+                <img src="images/github60.png" alt="Tunggu Sebentar Yaaa~" />
+              </a>
+              <a target="_blank" href="https://www.instagram.com/lailsy_/">
+                <img
+                  src="images/instagram60.png"
+                  alt="Tunggu Sebentar Yaaa~"
+                />
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
