commit about us

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -52,11 +52,11 @@
       <div class="kontentk">
         <img class="illus" src="images/illus.png" alt="Tunggu Sebentar Yaaa~" />
         <p class="keterangan">
-          Website ini adalah sebuah site yang kami buat untuk para fans
-          Blackpink atau biasa disebut Blink. Terdapat beberapa informasi
-          seperti profil member, album, lagu-lagu blackpink, dll. alasan kami
-          membuat ini untuk memudahkan blink untuk saling berinteraksi satu sama
-          lain dan bisa untuk mencari teman juga.
+          Hire Me Adalah Website iklan Lowongan Pekerjaan yang berguna bagi para
+          pengguna yang sedang mencari pekerjaan. Hire me bisa digunakan oleh
+          pengguna dengan usia 18-40 tahun. kedepannya kami selaku developer
+          akan terus mengembangkan website ini dengan baik dan bisa lebih
+          bermanfaat lagi bagi para pengguna.
           <br />Jika ada kesalahan informasi, silahkan hubungi kontak kami. kami
           juga menerima kritik dan saran. <br />jangan lupa terus dukung kami.
           kurang lebihnya mohon maaf, terima kasih
@@ -68,20 +68,11 @@
           <div class="kartu kartunama grayosh">
             <p class="namakn">Farrel Valentino Awewra</p>
             <div class="icon">
-              <a target="_blank" href="mailto:gladysglashta@gmail.com">
+              <a target="_blank" href="mailto:minjunda23@gmail.com">
                 <img src="images/email60.png" alt="Tunggu Sebentar Yaaa~" />
               </a>
               <a target="_blank" href="https://github.com/farrelval">
                 <img src="images/github60.png" alt="Tunggu Sebentar Yaaa~" />
-              </a>
-              <a
-                target="_blank"
-                href="https://www.instagram.com/gladysaisha/?hl=en"
-              >
-                <img
-                  src="images/instagram60.png"
-                  alt="Tunggu Sebentar Yaaa~"
-                />
               </a>
             </div>
           </div>
@@ -89,17 +80,11 @@
           <div class="kartu kartunama grayosh">
             <p class="namakn">Nur Alfianti Ika Mawarni</p>
             <div class="icon">
-              <a target="_blank" href="mailto:lailasys13@gmail.com">
+              <a target="_blank" href="mailto:ikamawarnie253@gmail.com">
                 <img src="images/email60.png" alt="Tunggu Sebentar Yaaa~" />
               </a>
               <a target="_blank" href="https://github.com/NurAlfianti">
                 <img src="images/github60.png" alt="Tunggu Sebentar Yaaa~" />
-              </a>
-              <a target="_blank" href="https://www.instagram.com/lailsy_/">
-                <img
-                  src="images/instagram60.png"
-                  alt="Tunggu Sebentar Yaaa~"
-                />
               </a>
             </div>
           </div>
