--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
           <div class="card-center">
             <h3>Google</h3>
-            <p class="card-detail">Data Science, Data Engineer</p>
+            <p class="card-detail">Data Science</p>
             <p class="card-loc">
               <ion-icon name="location-outline"></ion-icon>Abcd Street
             </p>
